<resources>
    <string name="app_name">Grocery App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_of_use_amp_privacy_policy"><font color="#EEEEEE">Terms of Use</font> &amp; <font color="#EEEEEE">Privacy Policy</font></string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_ur_name">Enter your Name</string>
    <string name="by_continue_you_agree_to_our">By continue, you agree to our</string>
    <string name="groceries_delivered_in_10_minutes">Fastest groceries delivered</string>
    <string name="grocery">Grocery</string>
    <string name="bitsGrocery">BitsGrocery</string>
    <string name="continue_">Continue</string>
    <string name="_10_minute_grocery_delivery">10 Minute Grocery Delivery</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="product_desc">Lays India Magic Masala Potato Chips 157 gms Combo</string>
    <string name="send">Send</string>
    <string name="product_suggestion_hint">Please enter the names of the products you want to find on Wlcnt.</string>
    <string name="product_suggest_text">Looking for something specific? Please suggest the products.</string>
    <string name="save_address">Save Address</string>
    <string name="change">Change</string>
    <string name="rupee">र %s</string>
    <string name="discount_price">-र %s</string>
    <string name="one_str">%s</string>
    <string name="two_str">%s %s</string>
    <string name="three_str">%s %s %s</string>
    <string name="my_address">%s \n%s (%s)</string>
    <string name="quantity_price">Qnt %s * र %s</string>
    <string name="product_not_found">Product Not Found</string>
    <string name="d_items">%d Items</string>
    <string name="prompt_info_title">Login Account</string>
    <string name="prompt_info_subtitle">Verify Your Indentity</string>
    <string name="prompt_info_use_app_password">Cancel</string>
    <string name="my_addresses">My Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="my_orders">My Orders</string>
    <string name="pay_type">Pay Type : %s</string>
    <string name="quantity">Qty : %s</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_mobile">Sign in with mobile</string>
    <string name="new_user_register">--------- New user? Register now ---------</string>
    <string name="your_first">Here\'s your first step with us</string>
    <string name="enter_mobile_num">Enter mobile num</string>
    <string name="confirm_password">Confirm password</string>
    <string name="verify">Verify</string>
    <string name="hello_welcome_back_to_your_account">Hello welcome back to your account.</string>
    <string name="did_not_receive">Did not receive?\t</string>
    <string name="resend">RESEND</string>
    <string name="cd_back_arrow">Back arrow</string>
    <string name="not_available">NA</string>
    <!--    <string name="terms_of_use_amp_privacy_policy">Terms of Use &amp; Privacy Policy</string>-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAKgqAyTO5G0rIf8laUc5_gOaF16Qwjg2Y
    </string>
    <string name="_d_items_in_your_cart_are_in_stock">%d items adjusted based on available quantity</string>
    <string name="rs_00">Rs 00</string>
    <string name="rs_f">Rs %.2f</string>
    <string name="minus_rs_f">- Rs %.2f</string>
    <string name="reduce_quantity_from_d_to_d">Reduce quantity from %d to %d</string>
    <string name="change_price_from_2f_to_2f">Change price from %.2f to %.2f</string>
    <string name="delivering_to">Delivering to <font color="#0000"> %s </font></string>
    <string name="location_not_serviceable">Location not serviceable</string>
    <string name="no_stock">No Stock</string>
    <string name="add">Add</string>


    <string name="applied_s">Applied: %s</string>
    <string name="s_discount">%s%% discount applied value: %.2f</string>


    <string name="confirm_logout">Confirm Logout?</string>
    <string name="sure_about_logout">Are you sure you want to logout 😅?</string>


    // No data texts
    <string name="no_coupon_found">No Coupon Found</string>
    <string name="valid_until_n_s">V A L I D U N T I L \n%s</string>
    <string name="s_perc">%s%%</string>



    <string name="payment_live_url">https://bits-panindia.com/WL-CNT/main/index.php/homepage/pay24Response_android</string>
    <string name="live_pay_url">https://pay-24.in/qw/main/index.php/onlinepayment/paynow</string>
    <string name="testing_pay_url">https://pay-24.in/qw/main/index.php/Onlinepayment/paynow_bits/</string>


    // Dialog error mess
    <string name="validate_cart_error">Some problem occurred in validating cart 😅</string>
    <string name="validate_cart_error_tech">Some technical problem occurred while validating cart 😓</string>
    <string name="payment_not_done">Payment not done or failed 😅</string>
    <string name="payment_not_done_tech">Some technical problem while doing payment 😓</string>
    <string name="payment_not_verified">Payment not verified, if payment deducted please contact support 😓</string>
    <string name="payment_verification_problem">Some problem while confirming order, If payment deducted please contact support 😅</string>
    <string name="payment_technical_problem">Some technical problem while confirming order, If payment deducted please contact support 😓</string>
    <string name="delivery_charges_error">Some problem while getting delivery charges 😅</string>
    <string name="delivery_charges_error_tech">Some technical problem while getting delivery charges 😓</string>
    <string name="coupon_error_tech">Some technical error in fetching coupons 😓</string>
    <string name="apply_coupon_tech">Some technical issue while applying this coupon 😓</string>
    <string name="can_t_apply_this_coupon">Can\'t apply this coupon 😅</string>
    <string name="home_page_error_tech">Some technical error occur while fetching product data 😓</string>
    <string name="home_page_error">Some error occur while fetching product data 😅</string>
    <string name="added">Added</string>
    <string name="prod_page_error_tech">Some technical error in fetching product details 😓</string>
    <string name="prod_page_error">Some error in fetching product details 😅</string>
    <string name="confirm_order_error_tech">Some technical error in confirming order 😓</string>
    <string name="confirm_order_error">Some error in confirming order 😅</string>
    <string name="click_ok_to_login">To confirm user must be login, click ok to login now</string>
    <string name="na">NA</string>

</resources>