<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data></data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_back"
        android:alpha="1">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/login_top_wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/login_top_wave"
            android:rotation="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_40"
            android:layout_marginHorizontal="@dimen/space_16"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/grocery"
            android:textColor="@color/red_500"
            android:textSize="45sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/groceries_delivered_in_10_minutes"
            android:textColor="@color/white"
            android:textSize="@dimen/text_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rounded"
            android:padding="@dimen/space_12"
            android:drawableStart="@drawable/icon_user"
            android:drawableTint="@color/grey_700"
            android:drawablePadding="@dimen/space_12"
            android:hint="@string/enter_user_name"
            android:textSize="@dimen/text_16"
            android:layout_marginTop="@dimen/space_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginHorizontal="@dimen/space_16"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:background="@drawable/white_rounded"
            android:layout_marginTop="@dimen/space_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUserName">

            <TextView
                android:id="@+id/tvNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="@dimen/space_4"
                android:text="+91"
                android:textColor="@color/grey_700"
                android:layout_marginStart="@dimen/space_8"
                android:textSize="@dimen/text_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:textSize="@dimen/text_16"
                android:padding="@dimen/space_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvNumber"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:textSize="@dimen/text_16"
            android:background="@drawable/white_rounded"
            android:backgroundTint="@color/red_500"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/space_20"
            app:layout_constraintTop_toBottomOf="@+id/clNumber"/>


        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/by_continue_you_agree_to_our"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"
            app:layout_constraintBottom_toTopOf="@+id/tvTermCondition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvTermCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginBottom="@dimen/space_30"
            android:text="@string/terms_of_use_amp_privacy_policy"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>