<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_16"
        android:backgroundTint="@color/white"
        android:background="@drawable/top_rouned_corner">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivClose"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/white"
            android:elevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.BottomBothCorners"
            app:srcCompat="@drawable/icon_cross"
            app:tint="@color/red_500"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="Suggest Products"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/text_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivClose" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/product_suggest_text"
            android:gravity="center_horizontal"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/text_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rouned_border"
            android:padding="@dimen/space_12"
            android:inputType="textMultiLine"
            android:ems="5"
            android:layout_marginTop="@dimen/space_16"
            android:gravity="top"
            android:hint="@string/product_suggestion_hint"
            android:textSize="@dimen/text_14"
            android:lines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="@dimen/text_16"
            android:background="@drawable/white_rounded"
            android:backgroundTint="@color/red_500"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/space_20"
            app:layout_constraintTop_toBottomOf="@+id/etProduct"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>