<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/login_top_wave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/login_top_wave"
                android:rotation="180"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="@dimen/space_32"
                android:layout_height="@dimen/space_32"
                android:layout_marginStart="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                android:padding="4dp"
                android:src="@drawable/icon_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/login_blue" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_8"
                android:fontFamily="@font/roboto_medium_600"
                android:text="Register"
                android:textColor="@color/login_blue"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backBtn" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_8"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/your_first"
                android:textColor="@color/white"
                android:textSize="@dimen/text_20"
                app:layout_constraintEnd_toStartOf="@id/signUpImg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <ImageView
                android:id="@+id/signUpImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/space_32"
                android:src="@drawable/img_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/signUpDetailLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16"
                android:layout_marginTop="@dimen/space_16"
                android:background="@drawable/bg_white_corner_10"
                android:elevation="4dp"
                android:padding="@dimen/space_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.218"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signUpImg">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signUpComNameEdTxt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_ur_name"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeWidth="@dimen/space_0"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button_border_corner"
                        android:inputType="textPersonName"
                        android:maxLength="30" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signUpEmailEdTxt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    app:boxBackgroundColor="#33F0F0F0"
                    app:boxStrokeWidth="@dimen/space_0"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signUpComNameEdTxt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button_border_corner"
                        android:inputType="textEmailAddress"
                        android:maxLength="40" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signUpMobileEdTxt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile_num"
                    app:boxBackgroundColor="#33F0F0F0"
                    app:boxStrokeWidth="@dimen/space_0"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signUpEmailEdTxt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button_border_corner"
                        android:inputType="phone"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signUpPassEdTxt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:hint="@string/password"
                    android:paddingTop="@dimen/space_10"
                    app:boxBackgroundColor="#B3F4F4F4"
                    app:boxStrokeWidth="@dimen/space_0"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/signUpComNameEdTxt"
                    app:layout_constraintStart_toStartOf="@id/signUpComNameEdTxt"
                    app:layout_constraintTop_toBottomOf="@id/signUpMobileEdTxt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button_border_corner"
                        android:inputType="textPassword"
                        android:maxLength="30" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signUpConfPassEdTxt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    app:boxBackgroundColor="#B3F4F4F4"
                    app:boxStrokeWidth="@dimen/space_0"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="@id/signUpPassEdTxt"
                    app:layout_constraintStart_toStartOf="@id/signUpPassEdTxt"
                    app:layout_constraintTop_toBottomOf="@id/signUpPassEdTxt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confPassEd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button_border_corner"
                        android:inputType="textPassword"
                        android:maxLength="30" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signUpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_16"
                    android:background="@drawable/white_rounded"
                    android:backgroundTint="@color/login_blue"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintTop_toBottomOf="@+id/signUpConfPassEdTxt" />


                <ProgressBar
                    android:id="@+id/progBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:indeterminateTint="@color/green_500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>